--- a/application/package.json
+++ b/application/package.json
@@ -12,6 +12,7 @@
     "react-firebase-hooks": "^4.0.1",
     "react-router": "^6.0.2",
     "react-scripts": "4.0.3",
+    "reactfire": "^4.2.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
